--- a/Class 1.ipynb
+++ b/Class 1.ipynb
@@ -78,7 +78,8 @@
     "# check if d1 is equal to d2\n",
     "# if it is:\n",
     "#     return True\n",
-    "# othe"
+    "# otherwise:\n",
+    "# return False"
    ]
   }
  ],
