--- a/Class 2.ipynb
+++ b/Class 2.ipynb
@@ -324,67 +324,63 @@
    "source": [
     "class Vehicle:\n",
     "\n",
-    "    def __init__(self, velocity, type, number_of_wheels, fuel_level):\n",
+    "    def __init__(self, velocity, type, number_of_wheels, fuel_type):\n",
     "        self.velocity = velocity\n",
     "        self.type = type\n",
     "        self.number_of_wheels = number_of_wheels\n",
     "        self.fuel_level = fuel_level\n",
     "    \n",
-    "    def velocity(self):\n",
-    "        print(\"Speed\")\n",
-    "\n",
-    "    def type(self):\n",
-    "        print(\"Truck, Motortcyle, Bus and Planes\")\n",
-    "\n",
-    "    def number_of_wheels(self):\n",
-    "        print(\"Two, Three, Four and Eighteen\")\n",
-    "\n",
-    "    def fuel_level(self):\n",
-    "        print(\"Fuel Level\")\n",
+    "    def get_fuel_type(self):\n",
+    "        return self.fuel_type\n",
     "        \n",
     "    \n",
     "\n",
-    "    class Truck(Vehicle):\n",
+    "class Truck(Vehicle):\n",
     "\n",
-    "        def __init__(self,transports, tow):\n",
-    "            self.transports = transports\n",
-    "            self.tow = tow\n",
-    "            print(\"4 People and Pulls a Boat\")\n",
-    "\n",
-    "    class Motorcycle(Vehicle):\n",
-    "\n",
-    "        def __init__(self, two_wheels, fast):\n",
-    "            self.two_wheels = two wheels\n",
-    "            self.fast = fast\n",
-    "\n",
-    "        def two_wheels(self):\n",
-    "            print(\"Transport Max two people\")\n",
-    "\n",
-    "        def super_fast(self):\n",
-    "            print(\"Crouch Rocket\")\n",
-    "    class Bus(Vehicle):\n",
-    "\n",
-    "        def __init__(self, public_transport, ten_rows):\n",
-    "            self.public_transport = public_transport\n",
-    "            self.ten_rows = ten_rows\n",
+    "    def tow(self):\n",
+    "        print(\"Truck tows a boat\")\n",
     "        \n",
-    "        def public_transport(self):\n",
-    "            print(\"Cheapest and slow form of Transportation\")\n",
+    "        \n",
+    "    def transports(self):\n",
+    "        print(\"4 to 6 people\")\n",
+    "        \n",
+    "    def can_tow(self):\n",
+    "        print(\"4 People and Pulls a Boat\")\n",
     "\n",
-    "        def ten_rows(self):\n",
-    "            print(\"Carries at least 30 people at a Time\")\n",
+    "class Motorcycle(Vehicle):\n",
     "\n",
-    "    class Airplane(Vehicle):\n",
+    "    def __init__(self, two_wheels, fast):\n",
+    "        self.two_wheels = two wheels\n",
+    "        self.fast = fast\n",
     "\n",
-    "        def __init__(self, sky_tranport, super_fast):\n",
-    "            self.sky_transport = sky_transport\n",
-    "            sefl.super_fast = super_fast\n",
+    "    def two_wheels(self):\n",
+    "        print(\"Transport Max two people\")\n",
     "\n",
-    "        def sky_transport(self):\n",
-    "            print(\"Gets in the clouds to transport people\")\n",
+    "    def super_fast(self):\n",
+    "        print(\"Crouch Rocket\")\n",
+    "class Bus(Vehicle):\n",
     "\n",
-    "        def super_fast(self):\n",
-    "            print(\"Fastest form of transportation\")"
+    "    def __init__(self, public_transport, ten_rows):\n",
+    "        self.public_transport = public_transport\n",
+    "        self.ten_rows = ten_rows\n",
+    "    \n",
+    "    def public_transport(self):\n",
+    "        print(\"Cheapest and slow form of Transportation\")\n",
+    "\n",
+    "    def ten_rows(self):\n",
+    "        print(\"Carries at least 30 people at a Time\")\n",
+    "\n",
+    "class Airplane(Vehicle):\n",
+    "\n",
+    "    def __init__(self, sky_tranport, super_fast):\n",
+    "        self.sky_transport = sky_transport\n",
+    "        sefl.super_fast = super_fast\n",
+    "\n",
+    "    def sky_transport(self):\n",
+    "        print(\"Gets in the clouds to transport people\")\n",
+    "\n",
+    "    def super_fast(self):\n",
+    "        print(\"Fastest form of transportation\")"
    ]
   }
  ],
